hphp/test/quick/SetOpProp.php.expectf
Test begin
C Object
(
    [p] => 1
    [a] => <a>
    [b] => <b><b>
    [q] => 1
    [r] => hello
)
In D::__get(a)
In D::__get(b)
In D::__get(q)
In D::__get(r)
D Object
(
    [container:D:private] => Array
        (
            [a] => D::a
            [b] => 42
        )

    [p] => 1
    [a] => D::a<a>
    [b] => 42<b><b>
    [q] => 1
    [r] => hello
)
In E::__get(a)
In E::__set(a, E::a<a>)
In E::__get(b)
In E::__set(b, 42<b>)
In E::__get(b)
In E::__set(b, 42<b><b>)
In E::__get(q)
In E::__set(q, 1)
In E::__get(r)
In E::__set(r, hello)
E Object
(
    [container:E:private] => Array
        (
            [a] => E::a<a>
            [b] => 42<b><b>
            [q] => 1
            [r] => hello
        )

    [p] => 1
)
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object

Warning: Attempt to assign property of non-object in %s on line 77

Warning: Attempt to assign property of non-object in %s on line 78
42
Test end
